--- a/etc/odoo.conf
+++ b/etc/odoo.conf
@@ -40,7 +40,7 @@
 ; ------
 ; --addons-path | type = string | specify additional addons paths (separated by commas).
 ; ------
-addons_path = /mnt/extra-addons,/mnt/enterprise-addons,/mnt/company-addons
+addons_path = /mnt/extra-addons,/mnt/extra-addons/enterprise
 
 ; ------
 ; --upgrade-path | type = string | specify an additional upgrade path.
@@ -57,7 +57,7 @@ addons_path = /mnt/extra-addons,/mnt/enterprise-addons,/mnt/company-addons
 ; ------
 data_dir = /etc/odoo
 
-admin_passwd = abutaleb
+admin_passwd = yasseribrahim740
 
 ; ==============================
 ; | HTTP Service Configuration |
