--- a/etc/odoo.conf
+++ b/etc/odoo.conf
@@ -57,7 +57,7 @@ addons_path = /mnt/extra-addons,/mnt/extra-addons/enterprise
 ; ------
 data_dir = /etc/odoo
 
-admin_passwd = yasseribrahim740
+admin_passwd = Thu27byWdPExUazKg9A6wf
 
 ; ==============================
 ; | HTTP Service Configuration |
