--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_DB=postgres
     restart: always             # run as a service
     volumes:
-        - ./postgresql:/var/lib/postgresql/data
+        - postgresql:/var/lib/postgresql/data
 
   odoo16:
     image: odoo:16
@@ -34,4 +34,5 @@ services:
       - ./enterprise:/mnt/enterprise-addons
       - ./workspace:/mnt/company-addons
     restart: always             # run as a service
-    
+ volumes:
+   - postgresql:
